@@ -30,11 +30,13 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.PaymentDocument;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.PaymentDocumentCollection;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.PensionType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.PensionTypeCollection;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.Region;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.RespondToOrderData;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.RespondToOrderDocumentCollection;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.document.BulkPrintDocument;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.CaseDataService;
 import uk.gov.hmcts.reform.finrem.caseorchestration.service.GenericDocumentService;
+import uk.gov.hmcts.reform.finrem.caseorchestration.service.StampType;
 
 import java.io.IOException;
 import java.time.LocalDate;
@@ -82,6 +84,7 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigCo
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.HEARING_NOTICES_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.HEARING_ORDER_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.HEARING_ORDER_OTHER_COLLECTION;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.HIGHCOURT_COURTLIST;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.LATEST_CONSENT_ORDER;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.PENSION_DOCS_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.RESPONDENT_ADDRESS;
@@ -269,6 +272,11 @@ public class DocumentHelper {
         });
     }
 
+    public List<PensionTypeCollection> getPensionDocuments(Map<String, Object> caseData) {
+        return objectMapper.convertValue(caseData.get(PENSION_DOCS_COLLECTION), new TypeReference<>() {
+        });
+    }
+
     public Optional<CaseDocument> getLatestRespondToOrderDocuments(Map<String, Object> caseData) {
         Optional<RespondToOrderData> respondToOrderData = ofNullable(caseData.get(RESPOND_TO_ORDER_DOCUMENTS))
             .map(this::convertToRespondToOrderDataList)
@@ -356,12 +364,12 @@ public class DocumentHelper {
         if (recipient == APPLICANT && caseData.isApplicantRepresentedByASolicitor()) {
             log.info("Applicant is represented by a solicitor");
             reference = nullToEmpty((caseData.getContactDetailsWrapper().getSolicitorReference()));
-            addresseeName = nullToEmpty((caseData.isConsentedApplication() ? CONSENTED_SOLICITOR_NAME : CONTESTED_SOLICITOR_NAME));
+            addresseeName = nullToEmpty(caseData.getAppSolicitorName());
             addressToSendTo = caseData.getAppSolicitorAddress();
         } else if (recipient == RESPONDENT && caseData.isRespondentRepresentedByASolicitor()) {
             log.info("Respondent is represented by a solicitor");
             reference = nullToEmpty((caseData.getContactDetailsWrapper().getRespondentSolicitorReference()));
-            addresseeName = nullToEmpty((caseData.getContactDetailsWrapper().getRespondentSolicitorName()));
+            addresseeName = nullToEmpty((caseData.getRespondentSolicitorName()));
             addressToSendTo = caseData.getContactDetailsWrapper().getRespondentSolicitorAddress();
         } else {
             log.info("{} is not represented by a solicitor", recipient);
@@ -479,7 +487,7 @@ public class DocumentHelper {
             .map(caseDocument -> BulkPrintDocument.builder().binaryFileUrl(caseDocument.getDocumentBinaryUrl())
                 .fileName(caseDocument.getDocumentFilename())
                 .build())
-            .toList();
+            .collect(Collectors.toList());
     }
 
     public Optional<BulkPrintDocument> getDocumentLinkAsBulkPrintDocument(Map<String, Object> data, String documentName) {
@@ -600,5 +608,22 @@ public class DocumentHelper {
             return objectMapper.convertValue(object, CaseDocument.class);
         }
         return null;
+    }
+
+    public boolean isHighCourtSelected(Map<String, Object> caseData) {
+        return caseData != null && caseData.get(HIGHCOURT_COURTLIST) != null;
+    }
+
+    public boolean isHighCourtSelected(FinremCaseData caseData) {
+        Region region = caseData.getRegionWrapper().getDefaultRegionWrapper().getRegionList();
+        return Region.HIGHCOURT.equals(region);
+    }
+
+    public StampType getStampType(Map<String, Object> caseData) {
+        return isHighCourtSelected(caseData) ? StampType.HIGH_COURT_STAMP : StampType.FAMILY_COURT_STAMP;
+    }
+
+    public StampType getStampType(FinremCaseData caseData) {
+        return isHighCourtSelected(caseData) ? StampType.HIGH_COURT_STAMP : StampType.FAMILY_COURT_STAMP;
     }
 }
